--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <body>
   <div class="container">
+    <button class="clear-btn">Clear</button>
     <div class="board"></div>
   </div>
 </body>
