--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 <body>
   <div class="container">
     <button class="clear-btn">Clear</button>
+    <div class="square-size">
+      <input type="range" id="size" name="size" min="1" max="100">
+      <label for="size"></label>
+    </div>
     <div class="board"></div>
   </div>
 </body>
