--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <input type="range" id="size" name="size" min="1" max="100">
       <label for="size"></label>
     </div>
+    <div class="paint-color">
+      <label for="color">Select Color</label>
+      <input type="color" id="color" name="color">
+    </div>
     <div class="board"></div>
   </div>
 </body>
