Add random color functionality

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       <label for="color">Select Color</label>
       <input type="color" id="color" name="color">
     </div>
+    <div class="random-color">
+      <input type="checkbox" id="random-color" name="random-color">
+      <label for="random-color">Colorful</label>
+    </div>
     <div class="board"></div>
   </div>
 </body>
