Add palette and eraser functionalities

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
       <input type="checkbox" id="random-color" name="random-color">
       <label for="random-color">Colorful</label>
     </div>
+    <div class="palette">
+      <input type="checkbox" id="palette" name="palette">
+      <label for="palette">Palette</label>
+    </div>
+    <div class="eraser">
+      <input type="checkbox" id="eraser" name="eraser">
+      <label for="eraser">Eraser</label>
+    </div>
     <div class="board"></div>
   </div>
 </body>
